[package]
name = "krc721-cluster"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
include.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
kaspa-consensus-core.workspace = true

krc721-core.workspace = true
krc721-rpc-client.workspace = true
krc721-rpc-core.workspace = true

async-trait.workspace = true
futures.workspace = true
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
hostname.workspace = true
tokio.workspace = true
tracing.workspace = true

workflow-core.workspace = true
workflow-rpc.workspace = true
workflow-log.workspace = true

