[package]
name = "krc721-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Kaspa KRC-721 Core Data Structures"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
kaspa-addresses.workspace = true
kaspa-bip32.workspace = true
kaspa-consensus-core.workspace = true
kaspa-consensus-client.workspace = true
kaspa-notify.workspace = true
kaspa-rpc-core.workspace = true
kaspa-utils.workspace = true
kaspa-wallet-core.workspace = true
kaspa-wallet-keys.workspace = true
kaspa-wrpc-client.workspace = true
kaspa-hashes.workspace = true
kaspa-txscript-errors.workspace = true
kaspa-txscript.workspace = true

workflow-core.workspace = true
workflow-http.workspace = true
workflow-log.workspace = true
workflow-wasm.workspace = true
workflow-rpc.workspace = true
workflow-serializer.workspace = true

ahash.workspace = true
async-trait.workspace = true
borsh.workspace = true
bs58.workspace = true
cfg-if.workspace = true
const-str.workspace = true
downcast-rs.workspace = true
faster-hex.workspace = true
futures-util.workspace = true
futures.workspace = true
itertools.workspace = true
js-sys.workspace = true
qrcode.workspace = true
rand.workspace = true
secp256k1.workspace = true
serde-wasm-bindgen.workspace = true
smallvec.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
wasm-bindgen-futures.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
kaspa-wasm.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctrlc.workspace = true
tokio.workspace = true

