[package]
name = "krc721-nexus"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
include.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
krc721-macros.workspace = true
krc721-core.workspace = true
krc721-database.workspace = true
krc721-rpc-core.workspace = true

kaspa-consensus-core.workspace = true
kaspa-notify.workspace = true
kaspa-rpc-core.workspace = true
kaspa-wrpc-client.workspace = true
kaspa-wallet-core.workspace = true
kaspa-txscript.workspace = true
kaspa-txscript-errors.workspace = true
kaspa-addresses.workspace = true
kaspa-hashes.workspace = true

ahash.workspace = true
arc-swap.workspace = true
async-std.workspace = true
async-trait.workspace = true
borsh.workspace = true
cfg-if.workspace = true
crossbeam-channel.workspace = true
downcast-rs.workspace = true
faster-hex.workspace = true
futures-util.workspace = true
futures.workspace = true
hex-literal.workspace = true
hex.workspace = true
hostname.workspace = true
itertools.workspace = true
mini-moka.workspace = true
portable-atomic.workspace = true
primitive-types.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
serde.workspace = true
smallvec.workspace = true
statsd.workspace = true
tap.workspace = true
thiserror.workspace = true
tracing.workspace = true

workflow-core.workspace = true
workflow-log.workspace = true
workflow-rpc.workspace = true
workflow-perf-monitor.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs.workspace = true
tokio.workspace = true
