[package]
name = "krc721-snapshot"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
include.workspace = true

[dependencies]
krc721-core.workspace = true
krc721-database.workspace = true
krc721-nexus.workspace = true

kaspa-consensus-core.workspace = true

workflow-core.workspace = true
workflow-log.workspace = true

ahash.workspace = true
async-trait.workspace = true
axum.workspace = true
bincode.workspace = true
borsh.workspace = true
bytes.workspace = true
cfg-if.workspace = true
cliclack.workspace = true
crossbeam-channel.workspace = true
faster-hex.workspace = true
fjall.workspace = true
flate2.workspace = true
futures.workspace = true
indicatif.workspace = true
mime.workspace = true
mini-moka.workspace = true
portable-atomic.workspace = true
rand.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde_with.workspace = true
serde.workspace = true
sha2.workspace = true
smallvec.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true