[package]
name = "hasher-bench"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
include.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
wyhash = "0.5.0"
ahash = "0.8.11"
fasthash = "0.4.0"
siphasher = "1.0.1"
rapidhash = "1.3.0"
cfg-if = "1.0.0"


[[bench]]
name = "block_hash"
harness = false

[[bench]]
name = "mint_id_gen"
harness = false